# ohms-model

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  SECURITY.md  canister_ids.json  dfx.json
.github/workflows/: ci.yml
src/: api.rs  lib.rs  ohms_model.did
src/domain/: mod.rs
src/infra/: guards.rs  metrics.rs  mod.rs
src/ohms-model-backend/: Cargo.toml
src/services/: governance.rs  mod.rs  storage.rs  validation.rs
