[package]
name = "ohms-model"
version = "1.0.0"
edition = "2021"
description = "OHMS Model Repository canister"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

# NOVAQ dependency for model types
ohms-adaptq = { path = "../ohms-adaptq" }
